src/app/presence-control/components/presence-control-entry/presence-control-entry.component.scss
@import "../../../../bootstrap-variables";

:host {
  padding: 2 * $spacer $spacer;
  background-color: $body-bg;
  display: grid;
  grid-template-areas:
    "avatar status designation previously-absent"
    "avatar student-info student-info student-info"
    "avatar incident incident incident";
  grid-template-columns: min-content min-content 3fr min-content;
}

:host > * {
  align-self: center;
}

.presence-category {
  text-decoration: none;
}

.presence-category i {
  top: $btn-padding-y * 0.5;
}

:host.absent .presence-category {
  color: $absent-color;
}

:host.present .presence-category {
  color: $present-color;
}

.presence-category bkd-spinner {
  color: black;
  position: absolute;
  top: 4px;
  left: 5px;
}

.designation,
.student-info,
a.incident,
.incident span {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.avatar {
  grid-area: avatar;
  margin-right: 1.5 * $spacer;
}

$presence-control-status-size: 2rem;
.status {
  grid-area: status;
}
.status .material-icons {
  font-size: $presence-control-status-size;
}

.designation {
  grid-area: designation;
  text-align: left;
  line-height: $presence-control-status-size + $btn-padding-y;
}

.previously-absent {
  grid-area: previously-absent;
  text-decoration: none;
  color: rgba($body-color, 0.5);
  justify-self: end;
}

.student-info {
  grid-area: student-info;
  display: flex;
  flex-direction: column;
  text-decoration: none;

  span:first-child {
    text-decoration: underline;
  }

  span:first-child:hover {
    text-decoration-color: $accent;
  }
}

$presence-control-unconfirmed-absences-size: $font-size-sm;
.unconfirmed-absences {
  color: $absent-color;
  font-size: $presence-control-unconfirmed-absences-size;
  line-height: 1;
}

.study-class {
  font-size: $font-size-sm;
  line-height: 1;
}

.incident {
  color: rgba($body-color, 0.5);
  padding-right: $btn-padding-x;
  grid-area: incident;
  display: flex;
  text-decoration: none;

  span {
    text-decoration: underline;
  }

  span:hover {
    text-decoration-color: $accent;
  }
}

.incident i {
  margin-right: 0.3em;
}

// Grid layout specifics
:host.grid {
  .status,
  .designation {
    align-self: start;
    margin-left: -$btn-padding-x;
    margin-top: -$btn-padding-y;
  }

  .incident {
    align-self: end;
    margin-left: -$btn-padding-x;
    margin-bottom: -$btn-padding-y;
  }

  .previously-absent {
    padding-right: 0;
    align-self: start;
  }

  .unconfirmed-absences {
    height: $presence-control-unconfirmed-absences-size; // Always occupy space, even if hint is not present
  }
}

// List layout overrides
:host.list {
  grid-template-areas: "student-info status incidentordesignation previously-absent";
  grid-template-columns: 3fr min-content 4fr 3em;
  padding: 0.5rem 1rem 0.5rem 1rem; //  $spacer / 2;

  .status {
    justify-self: start;
  }

  .student-name {
    line-height: 1;
    margin-bottom: 0.5rem;
  }

  .incident,
  .designation {
    grid-area: incidentordesignation;
  }

  .previously-absent {
    padding-right: 0;
  }

  @media (max-width: 750px) {
    grid-template-areas:
      "student-info student-info student-info previously-absent"
      "status incidentordesignation incidentordesignation incidentordesignation";
    grid-template-columns: min-content 1fr 1fr min-content;
    row-gap: $spacer;

    .status {
      padding-left: 0;
      padding-right: 0;
    }

    .student-name {
      margin-top: 0.5rem;
    }

    .previously-absent {
      align-self: start;
    }
  }
}

